k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    name: production
    environment: prod
