k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: prod
  labels:
    app: flask
spec:
  type: ClusterIP
  selector:
    app: flask
  ports:
  - name: http
    port: 80
    targetPort: 5000
    protocol: TCP
  sessionAffinity: None
